# EBGeometry-dev

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  EBGeometry.hpp  README.md  StaticAnalyzer.sh  a.out  doxyfile  main.cpp  run_clang_tidy.sh
.github/badges/: loc.json  loc.json.license
.github/workflows/: CI.yml  LinuxGNU.yml  clang-tidy-comments.yml  clang-tidy-post.yml  clang-tidy-review.yml  clang-tidy.yml  codespell.yml  cpp-linter.yml  dependabot.yml  docs.yml  format-suggests.yml  linux-gnu.yml  linux-intel.yml  loc-badge.yml  reuse.yml
.github/workflows/old/: CI.yml  clang-tidy-comments.yml
Docs/: doxyfile  doxyfile.conf
Docs/Sphinx/source/: ImplemBVH.rst  ImplemOctree.rst  Introduction.rst
Exec/Examples/AMReX_Shapes/: README.md  main.cpp
Exec/Examples/EBGeometry_Shapes/: CMakeLists.txt  Sphere.cpp
Exec/Tests/: AnalyticDistanceFunctionsTests.cpp  CMakeLists.txt  MeshParserTests.cpp  README.md  TriangleMeshTests.cpp  TriangleTests.cpp  VecTests.cpp  VertexTests.cpp  VirtualFunctionTests.cpp
Exec/Tests/Testing/Temporary/: CTestCostData.txt
Exec/Tests/Unit/: CMakeLists.txt  VecTests.cpp  VertexTests.cpp
Exec/dev-tests/DCEL/: CMakeLists.txt  main.cpp
Exec/dev-tests/Parser/: CMakeLists.txt  main.cpp
Exec/dev-tests/VirtualFunctions/: CMakeLists.txt  main.cpp  virtual_example.cpp
Meshes/: README.md
Source/: EBGeometry_Alignas.hpp  EBGeometry_AnalyticDistanceFunctions.hpp  EBGeometry_CSG.hpp  EBGeometry_Concepts.hpp  EBGeometry_DCEL.hpp  EBGeometry_DCEL_Edge.hpp  EBGeometry_DCEL_EdgeImplem.hpp  EBGeometry_DCEL_Face.hpp  EBGeometry_DCEL_FaceImplem.hpp  EBGeometry_DCEL_Mesh.hpp  EBGeometry_DCEL_MeshImplem.hpp  EBGeometry_DCEL_Polygon2D.hpp  EBGeometry_DCEL_Polygon2DImplem.hpp  EBGeometry_DCEL_Vertex.hpp  EBGeometry_DCEL_VertexImplem.hpp  EBGeometry_GPU.hpp  EBGeometry_GPUTypes.hpp  EBGeometry_GPUTypesImplem.hpp  EBGeometry_ImplicitFunction.hpp  EBGeometry_LayoutType.hpp  EBGeometry_Macros.hpp  EBGeometry_MeshDistanceFunctions.hpp  EBGeometry_MeshInspector.hpp  EBGeometry_MeshInspectorImplem.hpp  EBGeometry_MeshParser.hpp  EBGeometry_MeshParserImplem.hpp  EBGeometry_MeshParser_STL.hpp  EBGeometry_MeshParser_STLImplem.hpp  EBGeometry_Parser.hpp  EBGeometry_Polygon2D.hpp  EBGeometry_SFC.hpp  EBGeometry_SFCImplem.hpp  EBGeometry_Span.hpp  EBGeometry_SpanImplem.hpp  EBGeometry_Triangle.hpp  EBGeometry_Triangle2D.hpp  EBGeometry_Triangle2DImplem.hpp  EBGeometry_TriangleCollection.hpp  EBGeometry_TriangleCollectionImplem.hpp  EBGeometry_TriangleImplem.hpp  (+5 more)
